kubernetes/apps/ecm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ecm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ecm.mpdavis.com`)
      kind: Rule
      services:
        - name: ecm
          port: 6100
  tls: {}
